corrected CSS for dark mode issue

--- a/src/app/pages/back-to-office/back-to-office.page.scss
+++ b/src/app/pages/back-to-office/back-to-office.page.scss
@@ -16,7 +16,7 @@
   .office-button {
     width: 488px;
     height: 56px;
-    color: inherit;
+    color: var(--gds-black);
     font-size: 24px;
     font-weight: 600;
   }
